# JackAIGit

./: .gitignore  README.md  aigit.toml  install.sh  test.sh
aigit/: Cargo.toml
aigit/src/: api.rs  command.rs  config.rs  main.rs  ollama.rs
aigit/src/api/: common.rs  mod.rs  ollama.rs  openai.rs
