[package]
name = "aigit"
version = "0.1.0"
edition = "2024"
authors = ["Jack zsdfbb@126.com"]

[dependencies]
env_logger = "0.11.8"
log = "0.4.17"
config = "0.15.13"
clap = { version = "4.5.42", features = ["derive"] }
reqwest = { version = "0.12.21", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
lazy_static = "1.5.0"
env = "1.0.1"

[features]
default = ["debug"]
test = []
debug = []
